make bar chart page structure

--- a/WykresyXamarin/WykresyXamarin/MainPage.xaml
+++ b/WykresyXamarin/WykresyXamarin/MainPage.xaml
@@ -5,6 +5,12 @@
 
     <ContentPage Title="Słupkowy" Appearing="BarChartAppearing">
         <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Label FontSize="17" HorizontalOptions="Center" x:Name="slupkowyLabel"/>
+            <Grid x:Name="wykresSlupkowy" Grid.Row="1"></Grid>
         </Grid>
     </ContentPage>
 
